feature(entity-management-scv, api, Prisma): Add farmer documents uploading
Closes FOR-335
